# orrery

./: .env.example  .gitignore  CLAUDE.md  README.md
docs/: BUILD_LOG.md  DESIGN_SPEC.md  DESIGN_SPEC_V2.md  orrery-build-handoff-prd.md  resolution-confidence-engine-spec.md
docs/prototype/: orrery.jsx
pipeline/: README.md  pyproject.toml
pipeline/orrery_pipeline/: __init__.py  recompute.py
pipeline/orrery_pipeline/graph/: __init__.py  edges_v1.sql  edges_v2.sql  findings_v1.sql  insights_v1.sql  motifs_v1.sql  motifs_v2.sql  scrutiny_v1.sql
pipeline/orrery_pipeline/ingestion/: __init__.py  appg.py  companies_from_interests.py  companies_house.py  contracts_finder.py  donor_officers.py  electoral_commission.py  icij_leads.py  lords_interests.py  news_coverage.py  parliament.py  parliament_interests.py
pipeline/orrery_pipeline/resolution/: __init__.py  _db.py  calibrate_run.py  calibration.py  companies_house_v1.sql  dedupe_v1.sql  enrich_v1.sql  fuzzy_match.py  gold_set.py  resolve_v2.sql  resolve_v3.sql  uk_surnames.py
supabase/: config.toml
supabase/migrations/: 20260623180000_orrery_core_schema.sql  20260623180001_orrery_seed_lookups.sql  20260623181000_public_read_policies.sql  20260626120000_add_parliament_source.sql  20260627120000_add_contracts_finder_source.sql  20260703120000_add_lords_interests_source.sql  20260706120000_findings_tables.sql  20260707120000_insights_tables.sql  20260707130000_overseas_offshore_leads.sql  20260707140000_coverage.sql  20260707150000_add_appg_source.sql
web/: package-lock.json  package.json
web/app/: OrreryApp.jsx  (+4 more)
(+21 files in other folders)
